# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  README.md  index.data  index.html  index.js  shell.html
docs/: index.html  index.js  index.wasm
include/CHIP8-EMULATOR/: platform.hpp
include/glad/: gl.h
src/: CMakeLists.txt  chip8  chip8.cpp  chip8.hpp  main.cpp  platform.hpp
